--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,34 +1,41 @@
-name: CI/CD Pipeline
+name: CI
 
 on:
   push:
-    branches: [ main, develop ]
+    branches: [ main ]
   pull_request:
-    branches: [ main, develop ]
+    branches: [ main ]
 
 jobs:
   test:
     runs-on: ubuntu-latest
-    
+
+    strategy:
+      matrix:
+        node-version: [20.x]
+
     steps:
-    - uses: actions/checkout@v2
-    
-    - name: Setup Node.js
-      uses: actions/setup-node@v2
+    - uses: actions/checkout@v4
+
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v4
       with:
-        node-version: '18'
-        
-    - name: Install Dependencies
-      run: npm ci
-      
-    - name: Run Tests
-      run: npm test
-      
-    - name: Run Linting
-      run: npm run lint
-      
-    - name: Build
-      run: npm run build
+        node-version: ${{ matrix.node-version }}
+        cache: 'npm'
+
+    - name: Test Backend
+      working-directory: ./munday-reviews-backend
+      run: |
+        npm ci
+        npm run lint
+        npm test
+
+    - name: Test Frontend
+      working-directory: ./munday-reviews-frontend
+      run: |
+        npm ci
+        npm run lint
+        npm test -- --watch=false --browsers=ChromeHeadless
 
   deploy:
     needs: test
