--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -6,64 +6,19 @@ on:
     tags: [ 'v*' ]
 
 jobs:
-  build-and-push:
+  build:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
 
     steps:
     - uses: actions/checkout@v4
 
-    - name: Log in to GitHub Container Registry
-      uses: docker/login-action@v3
-      with:
-        registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
+    - name: Build Frontend Docker image
+      run: docker build -t munday-frontend ./munday-reviews-frontend
 
-    - name: Extract metadata for Docker
-      id: meta
-      uses: docker/metadata-action@v5
-      with:
-        images: |
-          ghcr.io/${{ github.repository }}/frontend
-          ghcr.io/${{ github.repository }}/backend
-        tags: |
-          type=semver,pattern={{version}}
-          type=sha,format=long
-          type=ref,event=branch
+    - name: Build Backend Docker image
+      run: docker build -t munday-backend ./munday-reviews-backend
 
-    - name: Build and push Frontend Docker image
-      uses: docker/build-push-action@v5
-      with:
-        context: ./munday-reviews-frontend
-        push: true
-        tags: ${{ steps.meta.outputs.tags }}
-        labels: ${{ steps.meta.outputs.labels }}
-
-    - name: Build and push Backend Docker image
-      uses: docker/build-push-action@v5
-      with:
-        context: ./munday-reviews-backend
-        push: true
-        tags: ${{ steps.meta.outputs.tags }}
-        labels: ${{ steps.meta.outputs.labels }}
-
-  deploy:
-    needs: build-and-push
-    runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
-
-    steps:
-    - name: Deploy to production
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.DEPLOY_HOST }}
-        username: ${{ secrets.DEPLOY_USER }}
-        key: ${{ secrets.DEPLOY_KEY }}
-        script: |
-          cd /opt/munday-reviews
-          docker-compose pull
-          docker-compose up -d
-          docker system prune -f 
+    - name: Test Docker Compose
+      run: |
+        docker-compose -f docker-compose.yml config
+        echo "Docker Compose configuration is valid" 
